--- a/src/components/Hex.scss
+++ b/src/components/Hex.scss
@@ -34,6 +34,8 @@
         width: auto;
         height: 100%;
         margin: 0 auto;
+        -webkit-transition: opacity .5s ease;
+        transition: opacity .5s ease;
         -webkit-transform: rotate3d(0,0,0,0deg);
                 transform: rotate3d(0,0,0,0deg);
       }
@@ -48,5 +50,9 @@
 
   .hexAfter {
     display: block;
+  }
+
+  :hover img {
+    opacity: 0;
   }
 }
