--- a/src/components/Hex.scss
+++ b/src/components/Hex.scss
@@ -29,8 +29,10 @@
       img {
         position: absolute;
         visibility: visible;
+        top: 0;
         left: -100%;
         right: -100%;
+        max-width: none;
         width: auto;
         height: 100%;
         margin: 0 auto;
